--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav_tittle{
@@ -41,3 +42,71 @@ nav a{
     text-decoration: none;
     color: #474747;
 }
+/* header section start */
+.header{
+    background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+.banner{
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+
+}
+.banner .banner_greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+.banner .banner_tittle{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+.banner p{
+    margin-top: 5px;
+}
+.banner .profile_pic{
+    width: 500px;
+
+}
+
+
+
+
+/* header section end */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
